Add hotlist start and end time validation

--- a/src/main/resources/templates/admin_panel/_hotList.html
+++ b/src/main/resources/templates/admin_panel/_hotList.html
@@ -458,8 +458,7 @@
         };
 
 
-        if (validation_check(["new_hot_list_product_number", "new_hot_list_start_date", "new_hot_list_end_date"
-        ])) {
+        if (validation_check(["new_hot_list_product_number", "new_hot_list_start_date", "new_hot_list_end_date", "new_hot_list_start_time", "new_hot_list_end_time"])) {
             event.preventDefault();
             $.post("/admin-panel/hotList", ret, function (data) {
                 iziToast.show({
