--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -156,6 +156,9 @@
             const bookCampaigns = result.bookCampaigns;
             const ebookCampaigns = result.ebookCampaigns;
             const audiobookCampaigns = result.audiobookCampaigns;
+            const ebookReaderCampaigns = result.ebookReaderCampaigns;
+            const ebookReaderCaseCampaigns = result.ebookReaderCaseCampaigns;
+            const bookCaseCampaigns = result.bookCaseCampaigns;
 
             const bookHotlists = result.bookHotlists;
             const ebookHotlists = result.ebookHotlists;
@@ -197,6 +200,15 @@
             });
             audiobookCampaigns.forEach(function (entry) {
                 audiobookCampaignElement.append('<li><a href="/campaign/' + entry.id + '" class="nav-bar-text-overflow">' + entry.name + '</a></li>')
+            });
+            ebookReaderCampaigns.forEach(function (entry) {
+                ebookCampaignElement.append('<li><a href="/campaign/' + entry.id + '" class="nav-bar-text-overflow">' + entry.name + '</a></li>')
+            });
+            ebookReaderCaseCampaigns.forEach(function (entry) {
+                ebookCampaignElement.append('<li><a href="/campaign/' + entry.id + '" class="nav-bar-text-overflow">' + entry.name + '</a></li>')
+            });
+            bookCaseCampaigns.forEach(function (entry) {
+                bookCampaignElement.append('<li><a href="/campaign/' + entry.id + '" class="nav-bar-text-overflow">' + entry.name + '</a></li>')
             });
 
             bookHotlists.forEach(function (entry) {
