Fix hotlist product types

--- a/src/main/resources/templates/admin_panel/_hotList.html
+++ b/src/main/resources/templates/admin_panel/_hotList.html
@@ -33,10 +33,9 @@
                                     class="dropdown_item_select checkout_input"
                                     required="required" th:field="${hotList.productType}">
                                 <option value="">Select Product Type</option>
-                                <option th:each="ctgry : ${T(com.oak.bookyourshelf.model.Category.ProductType).values()}"
-                                        th:value="${ctgry}"
-                                        th:text="#{${'category.' + ctgry}}">productType
-                                </option>
+                                <option value="BOOK">Book</option>
+                                <option value="E_BOOK">E-Book</option>
+                                <option value="AUDIO_BOOK">Audio Book</option>
                             </select>
                         </div>
                         <div id="thumb0" style="display: none" onclick="productType()"></div>
