--- a/src/main/resources/templates/product_details/_information.html
+++ b/src/main/resources/templates/product_details/_information.html
@@ -99,7 +99,7 @@
                     </div>
                     <div class="col-md-9">
                         <div class="tab-content-text">
-                            <h th:text="${'₺' + product.getPrice()}"></h>
+                            <h th:text="${'₺' + #numbers.formatDecimal(product.getPrice(), 0, 'COMMA', 2, 'POINT')}"></h>
                         </div>
                     </div>
                 </div>
