--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -91,7 +91,7 @@
                         <!-- Block1 -->
                         <div class="block1 wrap-pic-w">
                             <img th:src="@{/static/images/icons/03brownbookicon.jpg}" alt="IMG-BANNER">
-                            <a href="product.html"
+                            <a th:href="@{/books}"
                                class="block1-txt ab-t-l s-full flex-col-l-sb p-lr-38 p-tb-34 trans-03 respon3">
                                 <div class="block1-txt-child1 flex-col-l">
                                     <span class="block1-name ltext-102 trans-04 p-b-8">Books</span>
@@ -110,7 +110,7 @@
                         <!-- Block1 -->
                         <div class="block1 wrap-pic-w">
                             <img th:src="@{/static/images/icons/03brownebookicon.jpg}" alt="IMG-BANNER">
-                            <a href="product.html"
+                            <a th:href="@{/ebooks}"
                                class="block1-txt ab-t-l s-full flex-col-l-sb p-lr-38 p-tb-34 trans-03 respon3">
                                 <div class="block1-txt-child1 flex-col-l">
                                     <span class="block1-name ltext-102 trans-04 p-b-8">E-Books</span>
@@ -129,7 +129,7 @@
                         <!-- Block1 -->
                         <div class="block1 wrap-pic-w">
                             <img th:src="@{/static/images/icons/03brownaudiobookicon.jpg}" alt="IMG-BANNER">
-                            <a href="product.html"
+                            <a th:href="@{/audiobooks}"
                                class="block1-txt ab-t-l s-full flex-col-l-sb p-lr-38 p-tb-34 trans-03 respon3">
                                 <div class="block1-txt-child1 flex-col-l">
                                     <span class="block1-name ltext-102 trans-04 p-b-8">Audio Books</span>
