--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -41,7 +41,7 @@
                     <div class="products_bar d-flex flex-lg-row flex-column align-items-lg-center align-items-start justify-content-lg-start justify-content-center">
                         <div class="breadcrumbs d-flex flex-column align-items-center justify-content-center">
                             <ul class="d-flex flex-row align-items-start justify-content-start text-center">
-                                <li><a th:href="index.html">Home</a></li>
+                                <li><a th:href="@{/}">Home</a></li>
                                 <li th:text="#{${'category.' + category.getProductType()}}"></li>
                                 <li style="color: #fbaa1d" th:text="${category.getName()}"></li>
                             </ul>
