Remove books todo

--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -520,7 +520,7 @@
                                     <div class="product_image_showcase vertical_center">
                                         <a th:href="'/product/' + ${book.getProductId()}">
                                             <img th:src="|data:image/png;base64,${book.getEncodedCoverImage()}|" alt=""
-                                                 class="product_image_img"> <!-- TODO: Handle images -->
+                                                 class="product_image_img">
                                         </a>
                                     </div>
                                     <div class="product_content">
