--- a/src/main/resources/templates/campaign-details.html
+++ b/src/main/resources/templates/campaign-details.html
@@ -235,7 +235,7 @@
                                                    class="checkout_input form-control" th:field="${campaign.name}"
                                                    th:value="${campaign.getName()}"
                                                    placeholder="Campaign Name" required="required"
-                                                   pattern="^[a-zA-Z]{3,}((\s)[a-zA-Z]{3,})+">
+                                                   pattern="[A-Za-z ]+">
                                         </div>
 
                                         <div class="col-md-6">
