Navigate to admin panel category after category and subcategory deletion

--- a/src/main/resources/templates/category_details/_information.html
+++ b/src/main/resources/templates/category_details/_information.html
@@ -189,7 +189,7 @@
                         position: 'topRight',
                         color: 'green'
                     });
-                    window.location.href = "/admin-panel";
+                    window.location.href = "/admin-panel#category";
                 }).fail(function (data) {
                     iziToast.show({
                         title: 'Fail',
@@ -199,7 +199,7 @@
                     });
                 })
             } else {
-                window.location.href = "/admin-panel";
+                window.location.href = "/admin-panel#category";
             }
         }
 
