--- a/src/main/resources/templates/subcategory_details/_information.html
+++ b/src/main/resources/templates/subcategory_details/_information.html
@@ -160,7 +160,7 @@
                         position: 'topRight',
                         color: 'green'
                     });
-                    window.location.href = "/admin-panel";
+                    window.location.href = "/admin-panel#category";
                 }).fail(function (data) {
                     iziToast.show({
                         title: 'Fail',
@@ -170,7 +170,7 @@
                     });
                 })
             } else {
-                window.location.href = "/admin-panel";
+                window.location.href = "/admin-panel#category";
             }
         }
 
