--- a/src/main/resources/templates/ebooks.html
+++ b/src/main/resources/templates/ebooks.html
@@ -42,7 +42,7 @@
                         <div class="breadcrumbs d-flex flex-column align-items-center justify-content-center">
                             <ul class="d-flex flex-row align-items-start justify-content-start text-center">
                                 <li><a th:href="@{/}">Home</a></li>
-                                <li>E-Books</li>
+                                <li><a style="color: #fbaa1d" th:href="@{/ebooks}">E-Books</a></li>
                             </ul>
                         </div>
                     </div>
