Add book, ebook, audiobook listing links to header

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -20,7 +20,7 @@
             <!-- Nav Start -->
             <div class="classynav">
                 <ul>
-                    <li><a href="#">Book</a>
+                    <li><a th:href="@{/books}">Book</a>
                         <div class="megamenu">
                             <ul class="single-mega cn-col-4 megamenu-book-category">
                                 <li class="title">Categories</li>
@@ -41,7 +41,7 @@
                             </div>
                         </div>
                     </li>
-                    <li><a href="#">E-Book</a>
+                    <li><a th:href="@{/ebooks}">E-Book</a>
                         <div class="megamenu">
                             <ul class="single-mega cn-col-4 megamenu-ebook-category">
                                 <li class="title">Categories</li>
@@ -66,7 +66,7 @@
                             </div>
                         </div>
                     </li>
-                    <li><a href="#">Audio Book</a>
+                    <li><a th:href="@{/audiobooks}">Audio Book</a>
                         <div class="megamenu">
                             <ul class="single-mega cn-col-4 megamenu-audiobook-category">
                                 <li class="title">Categories</li>
