--- a/src/main/resources/static/styles/compare.css
+++ b/src/main/resources/static/styles/compare.css
@@ -7,11 +7,15 @@
 }
 
 .product_image {
-    display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
 .table {
     color: #4a4a4a;
+    border: 1px groove #dee2e6;
+}
+
+.no_hover {
+    pointer-events: none;
 }
