--- a/src/main/resources/templates/admin_panel/_product.html
+++ b/src/main/resources/templates/admin_panel/_product.html
@@ -120,7 +120,7 @@
                                     Published Year
                                 </div>
                                 <input type="text" id="book_published_year_input"
-                                       class="checkout_input form-control" pattern="[1-2][0-9]{3}"
+                                       class="checkout_input form-control" pattern="\b(1[4-9][0-9][0-9]|20[0-2][012])\b"
                                        placeholder="Published Year" required="required">
                             </div>
                             <div class="col-md-4">
@@ -373,7 +373,7 @@
                                     Published Year
                                 </div>
                                 <input type="text" id="ebook_published_year_input"
-                                       class="checkout_input form-control" pattern="[1-2][0-9]{3}"
+                                       class="checkout_input form-control" pattern="\b(1[4-9][0-9][0-9]|20[0-2][012])\b"
                                        placeholder="Published Year" required="required">
                             </div>
                             <div class="col-md-4">
@@ -587,7 +587,7 @@
                                     Published Year
                                 </div>
                                 <input type="text" id="audiobook_published_year_input"
-                                       class="checkout_input form-control" pattern="[1-2][0-9]{3}"
+                                       class="checkout_input form-control" pattern="\b(1[4-9][0-9][0-9]|20[0-2][012])\b"
                                        placeholder="Published Year" required="required">
                             </div>
                             <div class="col-md-4">
