--- a/src/main/resources/templates/profile/_order.html
+++ b/src/main/resources/templates/profile/_order.html
@@ -537,7 +537,7 @@
                             <div class="row">
                                 <div class="col-lg-3">
                                     <div class="profile-order-text vertical_center">
-                                        <div th:text="${#dates.format(order.getOrderDate(), 'dd-MM-yyyy')
+                                        <div th:text="${#dates.format(order.getOrderDate(), 'dd/MM/yyyy')
                                              + ' ' + #dates.format(order.getOrderDate(), 'HH:mm')}"></div>
                                     </div>
                                 </div>
