--- a/src/main/resources/templates/admin_panel/_product.html
+++ b/src/main/resources/templates/admin_panel/_product.html
@@ -120,7 +120,8 @@
                                     Published Year
                                 </div>
                                 <input type="text" id="book_published_year_input"
-                                       class="checkout_input form-control" pattern="\b(1[4-9][0-9][0-9]|20[0-2][012])\b"
+                                       class="checkout_input form-control"
+                                       pattern="\b(1[4-9][0-9][0-9]|20[0-1][0-9]|2020)\b"
                                        placeholder="Published Year" required="required">
                             </div>
                             <div class="col-md-4">
@@ -373,7 +374,8 @@
                                     Published Year
                                 </div>
                                 <input type="text" id="ebook_published_year_input"
-                                       class="checkout_input form-control" pattern="\b(1[4-9][0-9][0-9]|20[0-2][012])\b"
+                                       class="checkout_input form-control"
+                                       pattern="\b(1[4-9][0-9][0-9]|20[0-1][0-9]|2020)\b"
                                        placeholder="Published Year" required="required">
                             </div>
                             <div class="col-md-4">
@@ -587,7 +589,8 @@
                                     Published Year
                                 </div>
                                 <input type="text" id="audiobook_published_year_input"
-                                       class="checkout_input form-control" pattern="\b(1[4-9][0-9][0-9]|20[0-2][012])\b"
+                                       class="checkout_input form-control"
+                                       pattern="\b(1[4-9][0-9][0-9]|20[0-1][0-9]|2020)\b"
                                        placeholder="Published Year" required="required">
                             </div>
                             <div class="col-md-4">
