--- a/src/main/resources/templates/product_details/_information.html
+++ b/src/main/resources/templates/product_details/_information.html
@@ -1068,7 +1068,7 @@
                                     <input type="text" id="book_published_year_input" th:field="*{publishedYear}"
                                            th:value="${product.getPublishedYear()}"
                                            class="checkout_input form-control"
-                                           pattern="\b(1[4-9][0-9][0-9]|20[0-2][012])\b"
+                                           pattern="\b(1[4-9][0-9][0-9]|20[0-1][0-9]|2020)\b"
                                            placeholder="Published Year" required="required">
                                 </div>
                                 <div class="col-md-4">
@@ -1321,7 +1321,7 @@
                                     <input type="text" id="ebook_published_year_input" th:field="*{publishedYear}"
                                            th:value="${product.getPublishedYear()}"
                                            class="checkout_input form-control"
-                                           pattern="\b(1[4-9][0-9][0-9]|20[0-2][012])\b"
+                                           pattern="\b(1[4-9][0-9][0-9]|20[0-1][0-9]|2020)\b"
                                            placeholder="Published Year" required="required">
                                 </div>
                                 <div class="col-md-4">
@@ -1532,7 +1532,7 @@
                                     <input type="text" id="audiobook_published_year_input" th:field="*{publishedYear}"
                                            th:value="${product.getPublishedYear()}"
                                            class="checkout_input form-control"
-                                           pattern="\b(1[4-9][0-9][0-9]|20[0-2][012])\b"
+                                           pattern="\b(1[4-9][0-9][0-9]|20[0-1][0-9]|2020)\b"
                                            placeholder="Published Year" required="required">
                                 </div>
                                 <div class="col-md-4">
